--- a/src/main/resources/templates/fragmentos/Final.html
+++ b/src/main/resources/templates/fragmentos/Final.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html >
-<html lang="en" >
-<head >
+<!-- scripts_fragment.html -->
+<!DOCTYPE html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scripts</title>
+    <!-- Incluye aquí tus scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="/js/carrusel.js"></script>
+    <script src="/js/buscar.js"></script>
+    <script src="/js/favoritos.js"></script>
+    <script src="/js/cambiarDeColorCabecera.js"></script>
+    <script src="/js/añadirInicioSesion.js"></script>
+    <script src="/js/borrarCokieSesion.js"></script>
+    <script src="/js/monstrarCarrito.js"></script>
 </head>
 <body>
-
-</body  >
+</body>
 </html>
