--- a/src/main/resources/templates/html/comprar/comprar.html
+++ b/src/main/resources/templates/html/comprar/comprar.html
@@ -125,9 +125,11 @@
 </header>
 <body>
 
-<div id="checkout">
-    <!-- Checkout will insert the payment form here -->
-</div>
+<form id="payment-form">
+    <div id="card-element"><!-- Stripe Element will be inserted here --></div>
+    <button id="submit">Pagar</button>
+    <div id="payment-message" class="hidden"></div>
+</form>
 
 
 <div class="container" style="margin-top: 110px;">
