--- a/src/main/resources/templates/html/comprar/stripe.html
+++ b/src/main/resources/templates/html/comprar/stripe.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"><head>
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<head>
     <meta charset="UTF-8">
-    <title>Caracteristicas</title>
+    <title>Método de Pago</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/estilos.css">
-    <link rel="icon" href="/imagen/pestaña/corona.jpg">
-
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/tabla.css">
     <link rel="stylesheet" href="/css/carrusel.css">
-    <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/comprarCarrito.css">
-    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
-    <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .payment-form {
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .figure-details img {
+            width: 100%;
+            height: auto;
+            max-width: 300px; /* Limita el tamaño máximo de la imagen */
+        }
+        .figure-details h2, .figure-details p {
+            margin: 10px 0;
+        }
+        #payment-message {
+            margin-top: 10px;
+            color: red;
+        }
+    </style>
+    <script src="https://js.stripe.com/v3/"></script>
+
 </head>
-<body>
-<header class="p-3 bg-dark text-white fixed-top ">
+<header class="p-3 bg-dark text-white fixed-top">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
-                <li><a href="/inicio" id="linkInicio" class="nav-link px-2 text-secondary">Inicio</a></li>
-                <li><a href="/caracteristicas" id="linkCaracteristicas" class="nav-link px-2 text-white">Características</a></li>
-                <li><a href="/pagoEnca" id="linkPrecios" class="nav-link px-2 text-white">Precios</a></li>
-                <li><a href="/faqs" id="linkFaqs" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="/encabezado" id="linkAcerca" class="nav-link px-2 text-white">Acerca</a></li>
+                <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
+                <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
+                <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
+                <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
             </ul>
             <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
-
             <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;">
                 <i class="bi bi-search"></i>
                 <form id="searchForm" role="search" method="get" action="/figuras/filtrar">
@@ -38,18 +55,17 @@
                            placeholder="Buscar..." name="nombre">
                 </form>
             </div>
-
-
-
+            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;">
+                <i class="bi bi-save"></i>
+            </div>
             <div>
-
                 <div th:if="${#authorization.expression('!isAuthenticated()')}">
                     <div class="d-flex justify-content-end">
-                        <a th:href="@{/aaa}" class="btn btn-outline-light me-2">Iniciar sesión</a>
-                        <a th:href="@{/usuario/signup}" class="btn btn-warning">Registrar</a>
+                        <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesión</a>
+                        <a href="/usuario/signup" class="btn btn-warning">Registrar</a>
                     </div>
                 </div>
-                <ul style="margin-top: auto" class="nav ">
+                <ul style="margin-top: auto" class="nav">
                     <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
                         <!-- pones estio -->
                         <a class="nav-link dropdown-toggle text-primary" href="#" role="button"
@@ -58,19 +74,12 @@
                                     <span th:text="${#authentication.name}">Nombre de Usuario</span>
                                 </span>
                         </a>
-
-                        <ul class="dropdown-menu"  >
-                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar
-                                figura</a></li>
+                        <ul class="dropdown-menu">
+                            <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Agregar figura</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
-                            </li>
-                            <hr class="dropdown-divider">
-                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/usuario" class="nav-link px-2 text-secondary">Usuario pagina</a>
-                            </li>
-
+                            <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar página</a></li>
                             <li>
                                 <form th:action="@{/usuario/logout}" method="post">
                                     <button type="submit" class="btn btn-danger">Salir</button>
@@ -79,151 +88,81 @@
                         </ul>
                     </li>
                 </ul>
-
             </div>
-
-
-
             <div id="cart" style="margin: 10px;">
                 <i class="bi bi-cart"></i>
                 <span id="cartItemCount">0</span>
             </div>
-
             <div id="cartContainer" class="cart-container" style="display: none;">
                 <h2>Carrito de Compras</h2>
                 <ul id="cartItems"></ul>
                 <div id="cartTotal">Total: $0.00</div>
-                <button id="btnComprar">Comprar</button>
+                <a>
+                    <button id="btnComprar">Comprar</button>
+                </a>
             </div>
-            <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba-->
-            <!--    <div  sec:authorize="hasRole('ROLE_ADMIN')" >
-
-                    <h1>hola mundo</h1>
-
-                         <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
-
-
-                         <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
-                 </div>
-                  </div>-->
+        </div>
+    </div>
+</header>
+<body>
+<div class="container" style="margin-top: 110px;">
+    <div class="row">
+        <!-- Columna para el producto -->
+        <div class="col-md-6">
+            <div id="carrito-resumen"></div>
 
 
 
 
         </div>
+        <!-- Columna para el formulario de pago -->
+        <div class="col-md-6">
+            <!-- Columna para el formulario de datos de envío -->
+            <div class="col-md-6">
+                <div class="payment-form">
+                    <h2>Datos de Envío</h2>
+
+                        <div class="form-group">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" class="form-control" id="nombre" placeholder="Nombre" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="direccion">Dirección</label>
+                            <input type="text" class="form-control" id="direccion" placeholder="Dirección" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="ciudad">Ciudad</label>
+                            <input type="text" class="form-control" id="ciudad" placeholder="Ciudad" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="codigo_postal">Código Postal</label>
+                            <input type="text" class="form-control" id="codigo_postal" placeholder="Código Postal" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pais">País</label>
+                            <input type="text" class="form-control" id="pais" placeholder="País" required>
+                        </div>
+
+                </div>
+            </div>
+
+
+
+            <div class="payment-form">
+                <h2>Método de Pago</h2>
+                <form id="payment-form">
+                    <div class="form-group">
+                        <label for="cardName">Nombre en la Tarjeta</label>
+                        <input type="text" class="form-control" id="cardName" placeholder="Nombre en la tarjeta" required>
+                    </div>
+                    <div id="card-element"><!-- Stripe Element se insertará aquí --></div>
+                    <div id="payment-message" class="hidden"></div>
+                    <button type="submit" class="btn btn-primary btn-block">Pagar</button>
+                </form>
+            </div>
+        </div>
     </div>
-    </div>
-</header>
-
-<h1>Características de la Figura</h1>
-
-<div class="container-fluid" >
-
-
-<div class="card" style="margin-top: 60px">
-
-    <div class="card-body">
-
-
-
-
-    <h2>Título de la Figura:</h2>
-    <p> Figuras de One Piece/Dragon ball</p>
-
-
-    <h2>Descripción:</h2>
-    <p>Estas figuras son las más conocidas en todo el mundo, no hay una sola persona que no haya tenido una de estas figuras de Acción cuando era niño , estas figuras comenzaron a hacerse famosas después de que Hasbro creó su serie de  figuras de acción para el programa de televisión GI Joe, que por cierto estaba dirigido para los niños, por lo que no era adecuado llamarlos muñecas y decidieron llamarlos “figuras de acción”. </p>
-
-
-
-    <h2>Dimensiones:</h2>
-    <p>Altura: 15 cm<br> Ancho: 10 cm<br> Profundidad: 20 cm</p>
-
-
-
-
-
-
-    <h2>Material:</h2>
-    <p>Material utilizado para crear la figura :<br>
-        La gran mayoría de figuras de anime están hechas en PVC y compañías como Banpresto o Good Smile Company lo emplean en sus creaciones.<br>
-        Mantenimiento: Quitar el polvo a menudo para evitar que se nos pegue a la figura, una vez por semana sería lo ideal.
-
-    </p>
-
-
-
-    <h2>Técnica:</h2>
-    <p>Técnica artística utilizada para crear la figura: <br>
-
-        Mucho amor y cariño
-
-    </p>
-
-
-
-
-
-    <h2>Artista o Creador:</h2>
-    <p>Bandai Banpresto, Figma, ARTFX, Bandai SH Figuarts, PlayArts, SEGA Prize o Nendoroid</p>
-
-
-
-
-
-    <h2>Estilo Artístico:</h2>
-    <p>Cada figura tiene su propio estilo o su propia creación </p>
-
-
-
-    <h2>Significado o Simbolismo:</h2>
-    <p>Descripción del significado o simbolismo de la figura, si es relevante.</p>
-
-
-
-
-
-    <h2>Estado de Conservación:</h2>
-    <p>Huye de la luz solar o de cualquier otra fuente de calor, como focos, bombillas, estufas o radiadores, son muy dañinos para nuestras figuras. <br>
-        Mantén el humo y el polvo lejos de tus figuras ya que pueden dañar muy severamente las piezas. <br>
-        Coloca tus figuras en un ambiente fresco, ya que de esta forma evitaremos que las figuras experimenten una secreción aceitosa al tacto que les haga ser más frágiles. <br>
-        Olvídate de utilizar agua para la limpieza de tus figuras, ya que esta deteriora el material del que está compuesto. <br>
-        Ni se te ocurra utilizar productos químicos o de limpieza comunes sobre tu figura, podrías dañar profundamente el color y también el tacto de la figura. <br>
-        Si eres de los que prefieren quitar el polvo de las figuras con aire, por ejemplo, de un secador, hazlo siempre con la opción de aire frio, puesto que el aire caliente podría dañar los materiales e incluso la pintura de tus piezas.
-
-    </p>
-
-
-
-    <h2>Procedencia:</h2>
-    <p>La gran mayoria son de Japon</p>
-
-
-
-
-<h2>Precio o Valor:</h2>
-<p>Precio o valor estimado de la figura, si es aplicable.</p>
-
-<h2>Fotografías:</h2>
-<img src="/imagen/encabezado/zoro.jpg" alt="Zoro">
-<img src="/imagen/encabezado/sanks.jpg" alt="Snaks">
-
-
-<h2>Vídeos de montajes :</h2>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eyy7xoPvpwk?si=Knp87j1YsFo006EJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-    <div class="pt-3">
-
-        <a href="/inicio" class="btn btn-primary ">Inicio </a>
 </div>
-
-</div>
-</div>
-</div>
-
-
-
 <footer class="bg-dark text-white mt-4">
     <div class="container py-4">
         <div class="row">
@@ -265,7 +204,6 @@
         </div>
     </div>
 </footer>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}" ></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
@@ -276,9 +214,8 @@
 <script src="/js/añadirInicioSesion.js"></script>
 <script src="/js/borrarCokieSesion.js"></script>
 <script src="/js/monstrarCarrito.js"></script>
-
-
-
-
+<script src="/js/mostrarResumenCarrito.js"></script>
+<script src="/js/checkOut.js"></script>
 </body>
+
 </html>
