--- a/src/main/resources/templates/html/naruto/index.html
+++ b/src/main/resources/templates/html/naruto/index.html
@@ -38,9 +38,7 @@
                 </form>
             </div>
 
-            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;" data-id="${figura.id}" onclick="addFavoriteProduct(${figura.id})">
-                <i class="bi bi-bookmark bi-heart${figura.enFavoritos ? ' text-danger' : ''}"></i>
-            </div>
+
 
             <div>
 
@@ -130,54 +128,6 @@
     </div>
 </div>
 
-    <div class="container">
-        <div class="card-container"  style="margin-top: 110px;">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Lista de Figuras</h3>
-                </div>
-                <div class="card-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Imagen</th>
-                                <th>Nombre</th>
-                                <th>Arco</th>
-                                <th>Descripción</th>
-                                <th>Precio</th>
-                                <th>Compra</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="figuraNaruto: ${listaNaruto}">
-                                <td><img th:src="${figuraNaruto.url}" alt="imagen"></td>
-                                <td th:text="${figuraNaruto.nombre}">Nombre</td>
-                                <td th:text="${figuraNaruto.arco?.nombre}">Arco</td>
-                                <td th:text="${figuraNaruto.des}">Descripción</td>
-                                <td th:text="${figuraNaruto.precio}">Precio</td>
-                                <td>
-                                    <a th:href="@{/detalle/naruto/{id}(id=${figuraNaruto.id})}">
-
-                                        <button type="button" class="boton btn-comprar">Información</button>
-                                    </a>
-
-                                </td>
-                                <td>
-                                    <!--<input class="form-check-input" type="checkbox" id="compra">
-                                
-                                    <label class="form-check-label" for="compra">Compra</label> -->
-                                    <a th:href="@{/comprar/naruto(id=${figuraNaruto.id})}">
-                                        <button type="button" class="boton btn-comprar">Comprar</button>
-                                    </a>
-
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
@@ -224,12 +174,19 @@
 </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="/js/carrusel.js"></script>
 <script src="/js/buscar.js"></script>
+<script src="/js/favoritos.js"></script>
+<script src="/js/cambiarDeColorCabecera.js"></script>
+<script src="/js/añadirInicioSesion.js"></script>
 <script src="/js/borrarCokieSesion.js"></script>
 <script src="/js/monstrarCarrito.js"></script>
+
+
+
 
 </body>
 
