--- a/src/main/resources/templates/html/novedad/index.html
+++ b/src/main/resources/templates/html/novedad/index.html
@@ -38,9 +38,7 @@
                 </form>
             </div>
 
-            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;" data-id="${figura.id}" onclick="addFavoriteProduct(${figura.id})">
-                <i class="bi bi-bookmark bi-heart${figura.enFavoritos ? ' text-danger' : ''}"></i>
-            </div>
+
 
             <div>
 
@@ -175,14 +173,19 @@
 
 
 
-
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="/js/carrusel.js"></script>
 <script src="/js/buscar.js"></script>
+<script src="/js/favoritos.js"></script>
+<script src="/js/cambiarDeColorCabecera.js"></script>
+<script src="/js/añadirInicioSesion.js"></script>
 <script src="/js/borrarCokieSesion.js"></script>
 <script src="/js/monstrarCarrito.js"></script>
-<script src="/js/buscar.js"></script>
+
+
+
 </body>
 
 </html>
